--- a/style.css
+++ b/style.css
@@ -85,6 +85,14 @@ top: 20%;
     height: 100%;
     display: block;
 }
+.bc_aquafisio{
+    background: url(./imagens/aquafisio-logo.png);
+    background-size: cover;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: block;
+}
 
 .cont_info{
     width: 350px;
@@ -204,6 +212,7 @@ a:hover{
     color: #fff;
     padding: 30px;
     position: relative;
+    border-top: 1px solid #a5a39f;
 }
 
 .copy{
@@ -368,6 +377,12 @@ nav .justify-content-center{
 @media (max-width: 767px) {
     .list-group-horizontal{
         flex-direction: column;
+    }
+    .hdbutton{
+        display: none;
+    }
+    .backtop{
+        display: none;
     }
 }
 
