--- a/style.css
+++ b/style.css
@@ -49,34 +49,6 @@ right: 25%;
 top: 20%;
 }
 
-.main_buttons button{
-    width: 110px;
-    height: 35px;
-    border-radius: 50px;
-    font-size: 10px;
-    border: 0;
-    outline: 0;
-    margin-right: 15px;
-    cursor: pointer;
-    font-weight: bold;
-    transition: all 0.2s ease;
-    border: 2px solid white;
-    background-color: white;
-    margin-bottom: 10px;
-}
-.main_buttons button:hover{
-    background-color: transparent;
-    border: 2px solid white;
-    color: white;
-}
-.main_buttons button:first-of-type{
-    background-color: #fb8500;
-    border: 2px solid #fb8500;
-}
-.main_buttons button:first-of-type:hover{
-    background-color: transparent;
-    color: #fb8500;
-}
 
 .bc_carousel{
     background: linear-gradient(to right, rgba(0, 0, 0, 0.692) , transparent);
@@ -175,7 +147,7 @@ aside{
     font-size: 14px;
     
 }
-.sec_contato a{
+.acolor{
     color: #fff;
 }
 .contato{
@@ -194,6 +166,12 @@ a:hover{
 }
 .aweight{
     font-weight: bold;
+}
+.linkcolor{
+    color: #fb8500;
+}
+.aweight{
+    color:#fb8500
 }
 .mapasite{
     display: flex;
@@ -307,9 +285,7 @@ nav .justify-content-center{
 }
 
 
-.nav-item a{
-    padding-left: 0;
-}
+
 .navbar-toggler{
     display: none;
 }
@@ -352,7 +328,7 @@ nav .justify-content-center{
 
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1200px){
     .navbar-toggler{
         display: inherit;
     }
@@ -384,6 +360,20 @@ nav .justify-content-center{
     .backtop{
         display: none;
     }
+    .contato{
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+    .mapasite{
+        align-items: center;
+        text-align: center;
+    }
+}
+@media (max-width: 735px){
+    .mapasite{
+        margin-top: 15px;
+    }
 }
 
 .lista {
@@ -391,4 +381,80 @@ nav .justify-content-center{
 }
 .facebookiframe{
     width: 350px;
+}
+.carousel-item{
+    margin-top: 55px;
+}
+.dropdown-item{
+    border-top: 1px solid #e9e9e9
+}
+
+.aacademia{
+    margin-top: 55px;
+    padding: 30px;
+}
+
+.aacademia h1{
+    font-size: 28px;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    color: #fb8500;
+}
+
+.aacademia p{
+    display: flex;
+    justify-content: center;
+    padding: 15px 0;
+    text-align: center;
+}
+
+.accont{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.colop img{
+    border: 1px solid #a5a39f;
+
+}
+.colop{
+    display: flex;
+    justify-content: center;
+}
+
+
+.coltextmap h2{
+    font-size: 28px;
+    font-weight: bold;
+}
+.coltextmap{
+    display: flex;
+    justify-content: center;
+}
+
+.coltextmap p{
+    margin-top: 10px;
+}
+
+.clinicaaqua{
+    margin: 30px 0 30px 0;
+}
+
+.beneficios h3{
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.beneficios li{
+    font-size: 16px;
+    margin: 8px 0;
+    text-align: justify;
+}
+
+.pmusc{
+    text-align: justify!important;
 }
