--- a/style.css
+++ b/style.css
@@ -197,6 +197,7 @@ a:hover{
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 .logo{
@@ -379,6 +380,12 @@ nav .justify-content-center{
 .lista {
     list-style-type: circle;
 }
+.lista a {
+    color:#fb8500;
+}
+.lista a:hover{
+    color: #fbb800;
+}
 .facebookiframe{
     width: 350px;
 }
@@ -407,7 +414,7 @@ nav .justify-content-center{
     display: flex;
     justify-content: center;
     padding: 15px 0;
-    text-align: center;
+    text-align: justify;
 }
 
 .accont{
@@ -454,7 +461,10 @@ nav .justify-content-center{
     margin: 8px 0;
     text-align: justify;
 }
-
+.beneficios p{
+    font-size: 15px;
+    margin: 8px 0;
+}
 .pmusc{
     text-align: justify!important;
 }
