--- a/style.css
+++ b/style.css
@@ -156,6 +156,7 @@ aside{
     gap: 10px;
     word-break: break-all;
     width: 350px;
+    text-align: center;
 }
 a{
     text-decoration: none;
@@ -177,6 +178,7 @@ a:hover{
     display: flex;
     flex-direction: column;
     gap: 10px;
+    text-align: center;
 }
 
 .gridcont{
@@ -253,7 +255,6 @@ svg {
     right: 60px;
     bottom: 60px;
     justify-content: center;
-    align-items: center;
     -webkit-transform: rotate(-45deg);
     -moz-transform: rotate(-45deg);
     -ms-transform: rotate(-45deg);
@@ -486,4 +487,28 @@ nav .justify-content-center{
 
 .mapouter{
     border-left: .5px outset #bcb8b13f;
+}
+
+body .vertical-centered-box {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+}
+
+body .vertical-centered-box:after {
+    content: '';
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
+    margin-right: -0.25em;
+}
+
+body .vertical-centered-box .content {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    display: inline-block;
+    vertical-align: middle;
+    text-align: left;
 }
