--- a/style.css
+++ b/style.css
@@ -20,6 +20,8 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
     font-family: 'Poppins', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
  
 nav{
@@ -58,8 +60,12 @@ top: 20%;
     display: block;
 }
 .bc_aquafisio{
-    background: url(./imagens/aquafisio-logo.png);
+    background: url(./svg/aqualogo.svg);
     background-size: cover;
+    background-size: 55%;
+    background-repeat: no-repeat;
+    background-position-x: 50%;
+    background-position-y: 50%;
     position: absolute;
     width: 100%;
     height: 100%;
@@ -511,4 +517,8 @@ body .vertical-centered-box .content {
     display: inline-block;
     vertical-align: middle;
     text-align: left;
+}
+
+.ulginastica li{
+    font-size: 14px;
 }
